--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -232,12 +232,12 @@
                     android:padding="16dp">
 
                     <Button
-                        android:id="@+id/btn_camera"
+                        android:id="@+id/btn_functionality"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:layout_marginTop="12dp"
                         android:src="@drawable/ic_launcher_background"
-                        android:text="@string/camera"
+                        android:text="@string/functionality"
                         android:textColor="#000000">
 
                     </Button>
